--- a/SistemaVenta.AplicacionWeb/Views/Negocio/Index.cshtml
+++ b/SistemaVenta.AplicacionWeb/Views/Negocio/Index.cshtml
@@ -58,7 +58,7 @@
                         <div class="col-sm-4">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <img id="imgLogo" style="max-width:200px;" src="https://images.unsplash.com/photo-1640271443625-3276ed8f62b5?w=300" class="rounded" alt="Logo">
+                                    <img id="imgLogo" style="max-width:200px;" class="rounded" alt="Logo">
                                 </div>
                             </div>
                             <hr>
@@ -79,15 +79,7 @@
 
 @section Scripts
 {
-   <!-- Bootstrap core JavaScript-->
-    <script src="~/vendor/jquery/jquery.min.js"></script>
-    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="~/js/sb-admin-2.js"></script>
+    <script src="~/js/vistas/NegocioIndex.js" type="text/javascript"></script>
 
 }
 
