--- a/SistemaVenta.AplicacionWeb/Views/Categoria/Index.cshtml
+++ b/SistemaVenta.AplicacionWeb/Views/Categoria/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-sm-3">
-                    <button class="btn btn-success" data-toggle="modal" data-target="#modalData"><i class="fas fa-plus-circle"></i> Nueva Categoria</button>
+                <button class="btn btn-success" id="btnNuevo"><i class="fas fa-plus-circle"></i> Nueva Categoria</button>
                 </div>
             </div>
             <hr />
@@ -83,7 +83,7 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <input type="hidden" value="0" id="txtId">
+                        <input type="hidden" value="0" id="txtIdCategoria">
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="form-row">
@@ -126,8 +126,7 @@
     <script src="~/vendor/datatables/extensiones/js/buttons.html5.min.js"></script>
     <script src="~/vendor/datatables/extensiones/js/buttons.print.min.js"></script>
 
-    <!-- SOLO ES DE EJEMPLO - IGNORAR -->
-    <script src="~/js/vistas/datatables-demo.js"></script>
+    <script src="~/js/vistas/Categoria_Index.js"></script>
     
     }
 
